# FeatherNets_Face-Anti-spoofing-Attack-Detection-Challenge-CVPR2019

./: .gitignore  .gitmodules  AUTHORS  Android.mk  COPYING  ChangeLog  EnsembleCode_test.ipynb  EnsembledCode_test.ipynb  Feather_pytorch_2_onnx.py  LICENSE  METADATA  Makefile.am  NOTICE  README  README-template.md  README.md  autogen.sh  code_style.sh  configure.ac  env.yml  gen_final_submission.py  license_related.md  main.py  model_onnx2IR.py  multimodal_fusion_method.md  read_data.py
3alib/: Makefile.am  aiq3a_utils.cpp  aiq3a_utils.h  aiq_wrapper.cpp
3alib/aiq/: Makefile.am  aiq_wrapper.cpp
3alib/hybrid/: Makefile.am  sample.cpp
capi/: Makefile.am  context_priv.cpp  context_priv.h  xcam_handle.cpp  xcam_handle.h
clx_bin/: Makefile.am
clx_kernel/: Makefile.am
doc/: Doxyfile  Makefile.am  xcam_footer.html
doc/yocto/: libxcam_sample.bb
glx_shader/: .gitignore  Makefile.am
modules/: Makefile.am
modules/gles/: Makefile.am  gl_blender.cpp  gl_blender.h  gl_blender_shaders_priv.cpp  gl_blender_shaders_priv.h  gl_buffer.cpp  gl_buffer.h  gl_command.cpp  gl_command.h  gl_compute_program.cpp  gl_compute_program.h  gl_copy_handler.cpp  gl_copy_handler.h  gl_geomap_handler.cpp  gl_geomap_handler.h  gl_image_handler.cpp  gl_image_handler.h  gl_image_shader.cpp  gl_image_shader.h  gl_program.cpp  gl_program.h  gl_shader.cpp  gl_shader.h  gl_stitcher.cpp  gl_stitcher.h  gl_utils.cpp  gl_utils.h  gl_video_buffer.cpp  gl_video_buffer.h  gl_video_buffer_pool.cpp  gl_video_buffer_pool.h  gles_std.cpp  gles_std.h
modules/interface/: Makefile.am  blender.cpp  blender.h  data_types.h  feature_match.cpp  geo_mapper.cpp  geo_mapper.h  stitcher.cpp  stitcher.h
modules/isp/: Makefile.am  aiq3a_utils.cpp  aiq_handler.cpp  aiq_handler.h  atomisp_device.cpp  atomisp_device.h  hybrid_analyzer.cpp  hybrid_analyzer.h  hybrid_analyzer_loader.cpp  hybrid_analyzer_loader.h  isp_config_translator.cpp  isp_config_translator.h  isp_controller.cpp  isp_controller.h  isp_image_processor.cpp  isp_image_processor.h  isp_poll_thread.cpp  isp_poll_thread.h  libtbd.c  sensor_descriptor.cpp  sensor_descriptor.h  x3a_analyzer_aiq.cpp  x3a_analyzer_aiq.h  x3a_isp_config.h  x3a_statistics_queue.cpp  x3a_statistics_queue.h  xcam_cpf_reader.c  xcam_cpf_reader.h
modules/ocl/: Makefile.am  cl_3a_image_processor.cpp  cl_3a_image_processor.h  cl_3a_stats_context.cpp  cl_3a_stats_context.h  cl_3d_denoise_handler.cpp  cl_3d_denoise_handler.h  cl_argument.cpp  cl_argument.h  cl_bayer_basic_handler.cpp  cl_bayer_basic_handler.h  cl_bayer_pipe_handler.cpp  cl_bayer_pipe_handler.h  cl_bilateral_handler.cpp  cl_bilateral_handler.h  cl_biyuv_handler.cpp  cl_biyuv_handler.h  cl_blc_handler.cpp  cl_blc_handler.h  cl_blender.cpp  cl_blender.h  cl_bnr_handler.cpp  cl_context.cpp  cl_context.h  cl_csc_handler.cpp  cl_csc_handler.h  cl_csc_image_processor.cpp  cl_csc_image_processor.h  cl_defog_dcp_handler.cpp  cl_defog_dcp_handler.h  cl_demo_handler.cpp  cl_demo_handler.h  cl_demosaic_handler.cpp  cl_device.cpp  cl_device.h  cl_event.cpp  cl_event.h  cl_fisheye_handler.cpp  cl_fisheye_handler.h  cl_gamma_handler.cpp  (+83 more)
modules/ocv/: Makefile.am  cv_capi_feature_match.cpp  cv_capi_feature_match.h  cv_edgetaper.cpp  cv_edgetaper.h  cv_feature_match.cpp  cv_feature_match.h  cv_feature_match_cluster.cpp  cv_feature_match_cluster.h  cv_image_deblurring.cpp  cv_image_deblurring.h  cv_image_process_helper.cpp  cv_image_process_helper.h  cv_image_sharp.cpp  cv_image_sharp.h  cv_std.h  cv_utils.cpp  cv_utils.h  cv_wiener_filter.cpp  cv_wiener_filter.h
modules/render/: Makefile.am  render_osg_camera_manipulator.cpp  render_osg_camera_manipulator.h  render_osg_model.cpp  render_osg_model.h  render_osg_shader.h  render_osg_viewer.cpp  render_osg_viewer.h
modules/soft/: Makefile.am  cv_capi_feature_match.cpp  cv_capi_feature_match.h  soft_blender.cpp  soft_blender.h  soft_blender_tasks_priv.cpp  soft_blender_tasks_priv.h  soft_copy_task.cpp  soft_copy_task.h  soft_geo_mapper.cpp  soft_geo_mapper.h  soft_geo_tasks_priv.cpp  soft_geo_tasks_priv.h  soft_handler.cpp  soft_handler.h  soft_image.h  soft_image_allocator.cpp  soft_image_allocator.h  soft_stitcher.cpp  soft_stitcher.h  soft_video_buf_allocator.cpp  soft_video_buf_allocator.h  soft_worker.cpp  soft_worker.h
modules/vulkan/: Makefile.am  vk_blender.cpp  vk_blender.h  vk_cmdbuf.cpp  vk_cmdbuf.h  vk_copy_handler.cpp  vk_copy_handler.h  vk_descriptor.cpp  vk_descriptor.h  vk_device.cpp  vk_device.h  vk_geomap_handler.cpp  vk_geomap_handler.h  vk_handler.cpp  vk_handler.h  vk_instance.cpp  vk_instance.h  vk_memory.cpp  vk_memory.h  vk_pipeline.cpp  vk_pipeline.h  vk_shader.cpp  vk_shader.h  vk_stitcher.cpp  vk_stitcher.h  vk_sync.cpp  (+8 more)
smartlib/: Makefile.am  sample_smart_analysis.cpp
tests/: .gitignore  Makefile.am  feature_match.cpp  test-binary-kernel.cpp  test-cl-image.cpp  test-device-manager.cpp  test-gles-handler.cpp  test-image-blend.cpp  test-image-deblurring.cpp  test-image-stitching.cpp  test-pipe-manager.cpp  test-poll-thread.cpp  test-render-surround-view.cpp  test-soft-image.cpp  test-surround-view.cpp  test-video-stabilization.cpp  test-vk-handler.cpp  test-xcamsrc-camera.sh  test_common.h  test_inline.h  test_stream.h
xcore/: Makefile.am  aiq3a_utils.cpp  aiq3a_utils.h  aiq_handler.cpp  aiq_handler.h  analyzer_loader.cpp  analyzer_loader.h  atomisp_device.cpp  atomisp_device.h  buffer_pool.cpp  buffer_pool.h  calibration_parser.cpp  calibration_parser.h  cl_3a_image_processor.cpp  cl_3a_image_processor.h  cl_3a_stats_calculator.cpp  cl_3a_stats_calculator.h  cl_3a_stats_context.cpp  cl_3a_stats_context.h  cl_bayer_basic_handler.cpp  cl_bayer_basic_handler.h  cl_bayer_pipe_handler.cpp  cl_bayer_pipe_handler.h  cl_blc_handler.cpp  cl_blc_handler.h  cl_bnr_handler.cpp  cl_bnr_handler.h  cl_bo_buffer.cpp  cl_bo_buffer.h  cl_context.cpp  cl_context.h  cl_csc_handler.cpp  cl_csc_handler.h  cl_csc_image_processor.cpp  cl_defog_dcp_handler.cpp  cl_defog_dcp_handler.h  cl_demo_handler.cpp  cl_demo_handler.h  cl_demosaic_handler.cpp  cl_denoise_handler.cpp  (+179 more)
(+288 files in other folders)
