if HAVE_OPENCV
OCV_DIR = ocv
endif

if HAVE_LIBCL
OCL_DIR = ocl
endif

if HAVE_GLES
GLES_DIR = gles
endif

if HAVE_VULKAN
VULKAN_DIR = vulkan
endif

if ENABLE_RENDER
RENDER_DIR = render
endif

if ENABLE_IA_AIQ
ISP_DIR = isp
endif

SUBDIRS = $(OCV_DIR) soft $(OCL_DIR) $(GLES_DIR) $(VULKAN_DIR) $(RENDER_DIR) $(ISP_DIR)